<resources>
    <string name="app_name">P47S2120222GERH</string>
    <string name="suma">Ir a suma</string>
    <string name="resta">Ir a resta</string>
    <string name="titulosuma">OPERACION SUMA</string>
    <string name="tituloresta">OPERACION RESTA</string>
    <string name="calcula">CALCULAR</string>
    <string name="regresa">REGRESAR</string>
    <string name="lbl1">Ingresa un numero</string>
    <string name="lbl2">Ingresa otro numero</string>
    <string name="textnum1" />
    <string name="textnum2" />
    <string name="lblresultado">Resultado</string>
</resources>